# fishtest

./: .gitignore  .pre-commit-config.yaml  .travis.yml  2moves_v1.pgn  8moves_v2.epd  AUTHORS  CONTRIBUTING.md  Chess960.epd  README  README.md  SETUP  appveyor.yml  cutechess-cli.sh  lucas_v1.epd  pyproject.toml  requirements.txt  setup-fishtest.sh  setup.py  start_worker.sh  swcr.pgn  test_server.py  test_server.sh  test_worker.py  test_worker.sh  windows-step-by-step-installation.txt
.github/workflows/: compute_md5sums.py  lint.yaml  main.yaml  server.yaml  trivy-analysis.yaml  worker_linux.yaml  worker_msys2.yaml  worker_posix.yaml
docker/: README.md
docker/worker/: .env.example  Dockerfile  compose.yml  run_workers.sh
docs/: 0-README.md  1-architecture.md  2-threading-model.md  3-api-reference.md  4-ui-reference.md  5-templates.md  6-worker.md  7-development.md  8-deployment.md  9-references.md
fishtest/: MANIFEST.in  README.txt  development.ini  production.ini  run_all_tests.py  setup.py  start.sh  start_dev.sh  test_server.py
fishtest/backup/: backup.sh
fishtest/fishtest/: __init__.py  actiondb.py  api.py  builder.py  clop.py  clopdb.py  gendb.py  helpers.py  models.py  regression.py  regressiondb.py  rundb.py  security.py  spsadb.py  stat_util.py  synchro.py  tests.py  userdb.py  util.py  views.py
fishtest/fishtest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fishtest/fishtest/clop_worker/: Makefile  clop_worker.cpp
fishtest/fishtest/stats/: LLRcalc.py  brentq.py  brownian.py  sprt.py  stat_util.py
fishtest/fishtest/templates/: actions.mak  nns.mak  (+19 more)
fishtest/tests/: test_api.py  test_run.py  test_rundb.py  test_users.py  util.py
fishtest/utils/: backup.sh  clone_fish.py  compact_actions.py  create_indexes.py  create_pgndb.py  create_users.py  current.py  delta_update_users.py  index.py  index_active.py  index_change.py  index_pending.py  move2old_runs.py  purge_pgn.py  scavenge.py  test_queries.py  update_users.py
scripts/: timed.sh
server/: development.ini  production.ini  pyproject.toml  setup.py
server/fishtest/: __init__.py  actiondb.py  api.py  app.py  constants.py  durable_cursor.py  emailer.py  github_api.py  helpers.py  jwt_token.py  kvstore.py  lru_cache.py  models.py  mongodb_proxy.py  routes.py  run_cache.py  rundb.py  scheduler.py  schemas.py  spsa_handler.py  spsa_workflow.py  userdb.py  util.py  validate.py  views.py  views_actions.py  views_finished.py  views_helpers.py  views_machines.py  views_run.py  vtjson.py  workerdb.py
server/fishtest/http/: __init__.py  boundary.py  cookie_session.py  csrf.py  dependencies.py  errors.py  jinja.py  middleware.py  open_graph.py  session_middleware.py  settings.py  template_helpers.py  template_renderer.py  ui_context.py  ui_cookies.py  ui_errors.py  ui_pipeline.py
server/fishtest/static/css/: application.css  flags.css  live_elo.css  theme.dark.css
server/fishtest/static/html/: SPRTcalculator.html  events.html  finished_runs.html  live_elo.html  maintenance.html
server/fishtest/static/js/: active_run_filters.js  application.js  calc.js  contributors.js  gkr.js  jquery.cookie.js  live_elo.js  notifications.js  pull_request.js  sprt.js  spsa.js  spsa_new.js  tests_homepage.js  toggle_password.js  user_profile.js
server/fishtest/stats/: LLRcalc.py  brownian.py  sprt.py  stat_util.py
server/fishtest/templates/: actions.html.j2  actions.mak  actions_content_fragment.html.j2  actions_page_fragment.html.j2  actions_username_suggestions_fragment.html.j2  active_run_filters_fragment.html.j2  base.html.j2  base.mak  contributors.html.j2  contributors.mak  contributors_content_fragment.html.j2  contributors_rows_fragment.html.j2  elo_batch_fragment.html.j2  elo_results.html.j2  elo_results.mak  elo_results_fragment.html.j2  forgot_password.mak  homepage_stats_fragment.html.j2  live_elo_fragment.html.j2  login.html.j2  login.mak  machines.mak  machines_fragment.html.j2  machines_table.mak  nn_upload.html.j2  nn_upload.mak  nns.html.j2  nns.mak  nns_content_fragment.html.j2  notfound.html.j2  notfound.mak  pagination.html.j2  pagination.mak  pending.mak  pending_users_nav_fragment.html.j2  pull_request.mak  rate_limits.html.j2  rate_limits.mak  rate_limits_nav_fragment.html.j2  rate_limits_server_fragment.html.j2  (+50 more)
server/tests/: test_actions_view.py  test_api.py  test_app.py  test_delta_update_users.py  test_fastip.py  test_finished_view.py  test_github_api.py  test_http_boundary.py  test_http_dependencies.py  test_http_errors.py  test_http_helpers.py  test_http_middleware.py  test_http_open_graph.py  test_http_settings.py  test_http_ui_cookies.py  test_http_ui_session_semantics.py  test_kvstore.py  test_lru_cache.py  test_nn.py  test_run.py  test_rundb.py  test_spsa_workflow.py  test_support.py  test_users.py  test_validate.py  test_views_actions.py  test_views_admin.py  test_views_contributors.py  test_views_detail.py  test_views_finished.py  test_views_helpers.py  test_views_machines.py  test_views_routes.py  test_views_run.py  test_views_stats.py  test_views_tests.py  ui_user_test_case.py  util.py
server/utils/: analyze_access_log.py  aws_nets_sync.py  backup.sh  clone_fish.py  compact_actions.py  convert_actions.py  convert_users.py  create_indexes.py  create_pgndb.py  current.py  delta_update_users.py  fastip.bin.bz2  fastip.py  index_pending.py  nginx_cidr_builder.py  purge_pgn.py  purge_pgns.py  test_queries.py  upgrade.py  userdb.py
tasks/: celery.py  games.py  rundb.py  start_worker.sh  worker.py
worker/: __init__.py  fishtest.cfg  games.py  md5sums  pyproject.toml  setup.py  sri.txt  test_worker.py  updater.py  worker.py  worker_stats.py
worker/requests/: adapters.py
worker/tests/: test_worker.py
(+12 files in other folders)
